--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </div>
   <br>
   <br>
-   <a href="images/FleetWood.jpeg" <img src="/images/FleetWood.jpeg" alt="Fleet Wood Pharmacy's logo" class="center"></a>  
+   <img src="images 1/FleetWood.jpeg" alt="Fleet Wood Pharmacy's logo" class="center">
     
     <hr>
     
