--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <p>At the core of its corporate philosophy is KSM or Kay Sarap Magmahal, the customer-centered culture that is uniquely Fleet Wood Pharmacy’s.</p>
     <p>With the customer being the centerpiece of its corporate plans, Fleet Wood Pharmacy has streamlined its branch operation by installing advanced POS system in all branches thereby providing not only fast and efficient computerized service but also accurate accounting and inventory monitoring. With its home delivery facility – FleetExpress Delivery, buying medicines and grocery items is just a phone call away and delivered right to customers’ doorsteps.</p>
     <p>Mindful of its corporate responsibility to the community, Fleet Wood Pharmacy has established the Fleet Wood Pharmacy Foundation, which undertakes yearly various medical missions/free clinics to different barangays in the Philippine Islands, in cooperation with local medical practitioners and its partners in the pharmaceutical industry. The foundation has also provided scholarship grants to qualified children of its regular employees who wish to study B.S in Pharmacy in any college or university of their choice.</p>
-    <p>The establishment of this website further enhances Rose Pharmacy’s customer service thru on-line product inquiry and ordering and other on-line services.</p>
+    <p>The establishment of this website further enhances Fleet Wood Pharmacy’s customer service thru on-line product inquiry and ordering and other on-line services.</p>
     <p><strong>Main Branch Address:</strong> Don Alfaro St., Tetuan, Z.C</p><br>
     
   <!--Products Container-->
