--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         height: 100%;
         width: 100%;
         font-size: 20px;
-        font-family: "Inconsolata", monospace;
+        font-family: 'Inconsolata', monospace;
       }
       
       img {
