--- a/aboutus.html
+++ b/aboutus.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
   
   <style>
     body, html {
@@ -17,7 +17,7 @@
         height: 100%;
         width: 100%;
         font-size: 20px;
-        font-family: "Inconsolata", sans-serif;
+        font-family: "Crimson Pro", serif;
     }
     
     h1 {
