--- a/index.html
+++ b/index.html
@@ -123,18 +123,26 @@
     <div class="w3-center w3-col s6 tablink w3-text-gray"><b>Per Capsules/Tablets</b></div>
   </div>   
     <div id="Per Capsules/Tablets" class="w3-container products w3-padding-48 w3-card">
-      <p class="w3-text-grey">• Amoxicillin — Php 7.50 (500mg) [Prescription Required]</p>    
-      <p class="w3-text-grey">• Ascorbic Acid (Viatamin C) — Php 2.75 (500mg)</p>      
-      <p class="w3-text-grey">• Glimepiride — Php 11.75 (2mg) [Prescription Required]</p>      
-      <p class="w3-text-grey">• Paracetamol — Php 4.25 (500mg)</p>     
+      <p class="w3-text-grey">• Amoxicillin — Php 7.50 (500mg) [Prescription Required]</p>
+        <img src="images 1/Amoxicillin.webp" alt="Amoxicillin">    
+      <p class="w3-text-grey">• Ascorbic Acid (Viatamin C) — Php 2.75 (500mg)</p>  
+        <img src="images 1/AscorbicAcid.jpeg" alt="Ascorbic Acid">    
+      <p class="w3-text-grey">• Glimepiride — Php 11.75 (2mg) [Prescription Required]</p>  
+        <img src="images 1/Glimepiride.jpeg" alt="Glimepiride">  
+      <p class="w3-text-grey">• Paracetamol — Php 4.25 (500mg)</p>    
+        <img src="images 1/Paracetamol.jpeg" alt="Paracetamol">
       <p class="w3-text-grey">• Supracid — Php 2.00 (650mg)</p>
+        <img src="images 1/Supracid.webp" alt="Supracid">
       <p class="w3-text-grey">• Clopidogrel — Php 14.75 (75mg) [Prescription Required]</p>
-      <p class="w3-text-grey">• FERN-C Plus CAPSULES 100s - Php 7.75(</p>
+        <img src="images 1/Clopidogrel.jpeg" alt="Clopidogrel">
       <p class="w3-text-grey">• Diamicron MR - Php 4.25 (60 mg)</p>
+        <img src="images 1/DiamicronMr.jpeg" alt="Diamicron Mr">
       <p class="w3-text-grey">• RiteMed Metformin Tablet - Php 3.50 (500mg)</p>
+        <img src="images 1/Metformin.jpeg" alt="Metformin">
       <p class="w3-text-grey">• Uhp Ferrous Sulfate - Php 2.00 (500mg)
+        <img src="images 1/Ferrous.webp" alt="Ferrous Sulfate">
       <p class="w3-text-grey">• Aspilets Ec - Php 4.00 (80mg)</p>
-      <p class="w3-text-grey">• Glumet Xr - Php 12.00 (500mg)</p>
+        <img src="images 1/Aspilets.jpeg" alt="Aspilets">
      </div>
   </div>
   <hr>
