--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         border-radius: 15px;
         object-fit: cover;
       }
+
+      .medimages {
+        width: 200px;
+        height: 100px;
+        object-fit: cover;
+      }
       
       a {
         font-size: 16px
@@ -124,25 +130,25 @@
   </div>   
     <div id="Per Capsules/Tablets" class="w3-container products w3-padding-48 w3-card">
       <p class="w3-text-grey">• Amoxicillin — Php 7.50 (500mg) [Prescription Required]</p>
-        <img src="images 1/Amoxicillin.webp" alt="Amoxicillin">    
+        <img src="images 1/Amoxicillin.webp" alt="Amoxicillin" class="medimages">    
       <p class="w3-text-grey">• Ascorbic Acid (Viatamin C) — Php 2.75 (500mg)</p>  
-        <img src="images 1/AscorbicAcid.jpeg" alt="Ascorbic Acid">    
+        <img src="images 1/AscorbicAcid.jpeg" alt="Ascorbic Acid" class="medimages">    
       <p class="w3-text-grey">• Glimepiride — Php 11.75 (2mg) [Prescription Required]</p>  
-        <img src="images 1/Glimepiride.jpeg" alt="Glimepiride">  
+        <img src="images 1/Glimepiride.jpeg" alt="Glimepiride" class="medimages">  
       <p class="w3-text-grey">• Paracetamol — Php 4.25 (500mg)</p>    
-        <img src="images 1/Paracetamol.jpeg" alt="Paracetamol">
+        <img src="images 1/Paracetamol.jpeg" alt="Paracetamol" class="medimages">
       <p class="w3-text-grey">• Supracid — Php 2.00 (650mg)</p>
-        <img src="images 1/Supracid.webp" alt="Supracid">
+        <img src="images 1/Supracid.webp" alt="Supracid" class="medimages">
       <p class="w3-text-grey">• Clopidogrel — Php 14.75 (75mg) [Prescription Required]</p>
-        <img src="images 1/Clopidogrel.jpeg" alt="Clopidogrel">
+        <img src="images 1/Clopidogrel.jpeg" alt="Clopidogrel" class="medimages">
       <p class="w3-text-grey">• Diamicron MR - Php 4.25 (60 mg)</p>
-        <img src="images 1/DiamicronMr.jpeg" alt="Diamicron Mr">
+        <img src="images 1/DiamicronMr.jpeg" alt="Diamicron Mr" class="medimages">
       <p class="w3-text-grey">• RiteMed Metformin Tablet - Php 3.50 (500mg)</p>
-        <img src="images 1/Metformin.jpeg" alt="Metformin">
+        <img src="images 1/Metformin.jpeg" alt="Metformin" class="medimages">
       <p class="w3-text-grey">• Uhp Ferrous Sulfate - Php 2.00 (500mg)
-        <img src="images 1/Ferrous.webp" alt="Ferrous Sulfate">
+        <img src="images 1/Ferrous.webp" alt="Ferrous Sulfate" class="medimages">
       <p class="w3-text-grey">• Aspilets Ec - Php 4.00 (80mg)</p>
-        <img src="images 1/Aspilets.jpeg" alt="Aspilets">
+        <img src="images 1/Aspilets.jpeg" alt="Aspilets" class="medimages">
      </div>
   </div>
   <hr>
