--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <p class="w3-text-grey">• Paracetamol — Php 4.25 (500mg)</p>    
         <img src="images 1/Paracetamol.jpeg" alt="Paracetamol" class="medimages">
       <p class="w3-text-grey">• Supracid — Php 2.00 (650mg)</p>
-        <img src="images 1/Supracid.webp" alt="Supracid" class="medimages">
+        <img src="images 1/Supracid.jpg" alt="Supracid" class="medimages">
       <p class="w3-text-grey">• Clopidogrel — Php 14.75 (75mg) [Prescription Required]</p>
         <img src="images 1/Clopidogrel.jpeg" alt="Clopidogrel" class="medimages">
       <p class="w3-text-grey">• Diamicron MR - Php 4.25 (60 mg)</p>
@@ -146,7 +146,7 @@
       <p class="w3-text-grey">• RiteMed Metformin Tablet - Php 3.50 (500mg)</p>
         <img src="images 1/Metformin.jpeg" alt="Metformin" class="medimages">
       <p class="w3-text-grey">• Uhp Ferrous Sulfate - Php 2.00 (500mg)
-        <img src="images 1/Ferrous.webp" alt="Ferrous Sulfate" class="medimages">
+        <img src="images 1/Ferrous.jpeg" alt="Ferrous Sulfate" class="medimages">
       <p class="w3-text-grey">• Aspilets Ec - Php 4.00 (80mg)</p>
         <img src="images 1/Aspilets.jpeg" alt="Aspilets" class="medimages">
      </div>
