--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <img src="images 1/DiamicronMr.jpeg" alt="Diamicron Mr" class="medimages">
       <p class="w3-text-grey">• RiteMed Metformin Tablet - Php 3.50 (500mg)</p>
         <img src="images 1/Metformin.jpeg" alt="Metformin" class="medimages">
-      <p class="w3-text-grey">• Uhp Ferrous Sulfate - Php 2.00 (500mg)
+      <p class="w3-text-grey">• Uhp Ferrous Sulfate - Php 2.00 (500mg)</p>
         <img src="images 1/Ferrous.jpeg" alt="Ferrous Sulfate" class="medimages">
       <p class="w3-text-grey">• Aspilets Ec - Php 4.00 (80mg)</p>
         <img src="images 1/Aspilets.jpeg" alt="Aspilets" class="medimages">
