--- a/aboutus.html
+++ b/aboutus.html
@@ -48,10 +48,19 @@
       color: darkblue;
       font-size: 25px;
     }
+
+    img {
+      width: 500px;
+      height: 300px;
+      border-radius: 15px;
+      object-fit: cover;
+    }
   </style>
 </head>
 
 <body>
+  <img src="images 1/Health.jpg" alt="Health is Wealth">
+
     <!--Links (sit on top)-->
   <div class="w3-top">
     <div class="w3-row w3-padding w3-blue">
