--- a/aboutus.html
+++ b/aboutus.html
@@ -54,6 +54,9 @@
       height: 300px;
       border-radius: 15px;
       object-fit: cover;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
   </style>
 </head>
