--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>Fleet Wood Farmacy's Application Form</title>
@@ -83,6 +83,7 @@
 <hr>
 <!--Home Area-->
      <img src="images 1/Health.jpg" alt="Health is Wealth">
+     <hr>
   <div class="w3-container"
     <h2 class="w3-center w3-padding-64"><span class="w3-tag w3-wide w3-blue">Now Hiring!</span></h2>
     <h3><u>Job Description</u></h3><br>
