--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
   </div>  
   <hr>
-  <h5><span class="w3-tag w3-padding w3-blue">Fleet Wood Pharmacy is now hiring! Click <a class="hiring" href="aboutus.html">here</a> to find out more.</span></h5>
+  <h5><span class="w3-tag w3-padding w3-blue">Looking for an available Pharmaceutical job position? Then you're just in luck today. Fleet Wood Pharmacy is now officially hiring! Click <a class="hiring" href="aboutus.html">here</a> to see more details.</span></h5>
   <!--End of Page Content-->
   
   <hr>
