--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
         <img src="images 1/Supracid.jpg" alt="Supracid" class="medimages">
       <p class="w3-text-grey">• Clopidogrel — Php 14.75 (75mg) [Prescription Required]</p>
         <img src="images 1/Clopidogrel.jpeg" alt="Clopidogrel" class="medimages">
-      <p class="w3-text-grey">• Diamicron MR - Php 4.25 (60 mg)</p>
+      <p class="w3-text-grey">• Diamicron MR — Php 4.25 (60 mg)</p>
         <img src="images 1/DiamicronMr.jpeg" alt="Diamicron Mr" class="medimages">
-      <p class="w3-text-grey">• RiteMed Metformin Tablet - Php 3.50 (500mg)</p>
+      <p class="w3-text-grey">• RiteMed Metformin Tablet — Php 3.50 (500mg)</p>
         <img src="images 1/Metformin.jpeg" alt="Metformin" class="medimages">
-      <p class="w3-text-grey">• Uhp Ferrous Sulfate - Php 2.00 (500mg)</p>
+      <p class="w3-text-grey">• Uhp Ferrous Sulfate — Php 2.00 (500mg)</p>
         <img src="images 1/Ferrous.jpeg" alt="Ferrous Sulfate" class="medimages">
-      <p class="w3-text-grey">• Aspilets Ec - Php 4.00 (80mg)</p>
+      <p class="w3-text-grey">• Aspilets Ec — Php 4.00 (80mg)</p>
         <img src="images 1/Aspilets.jpeg" alt="Aspilets" class="medimages">
      </div>
   </div>
@@ -160,11 +160,13 @@
       <p>Facebook:<a href="https://www.facebook.com/gabriella.tschaunder">https://www.facebook.com/gabriella.tschaunder</a></p>
       <p class="email">Email Address:<a href="mailto:lilpsychos177@gmail.com">lilpsychos177@gmail.com</a></p>
     </div>
-  </div>  
+  </div>
+  <br>  
   <hr>
+  <br>
   <h5><span class="w3-tag w3-padding w3-blue">Looking for an available Pharmaceutical job position? Then you're just in luck today. Fleet Wood Pharmacy is now officially hiring! Click <a class="hiring" href="aboutus.html">here</a> to see more details.</span></h5>
   <!--End of Page Content-->
-  
+  <br>
   <hr>
   <h6>Important Info:</h6>
     <p class="add-p">Pharmacy is the science and practice of discovering, producing, preparing, dispensing, reviewing and monitoring medications, aiming to ensure the safe, effective, and affordable use of medicines. It is a miscellaneous science as it links health sciences with pharmaceutical sciences and natural sciences. The professional practice is becoming more clinically oriented as most of the drugs are now manufactured by pharmaceutical industries. Based on the setting, pharmacy practice is either classified as community or institutional pharmacy. Providing direct patient care in the community of institutional pharmacies is considered clinical pharmacy.</p>
