--- a/aboutus.html
+++ b/aboutus.html
@@ -146,7 +146,7 @@
         <p><input class="w3-input w3-padding-10 w3-border" type="text" placeholder="Name" required name="Name"></p>
         <p><input class="w3-input w3-padding-10 w3-border" type="text" placeholder="Age" required name="Age"</p>
         <p><input class="w3-input w3-padding-10 w3-border"
-        type="text" placeholder="Phone Number" required name="Number"</p>
+        type="text" placeholder="Contact Number" required name="Number"</p>
         <p><input class="w3-input w3-padding-10 w3-border" type="text" placeholder="Address" required name="Address"</p>
         <p><button class="w3-button w3-blue" type="submit">SUBMIT</button></p>
         <p> Wait for further announcement after the submission of form. Thank you.</p>
